ka1/services/n8n/n8n-runner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n-runner
  template:
    metadata:
      labels:
        app: n8n-runner
    spec:
      containers:
        - name: n8n-runner
          image: n8nio/runners:2.21.1
          ports:
            - containerPort: 5680
          imagePullPolicy: Always
