ka1/services/n8n/n8n-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5678
      targetPort: 5678
    - name: runners
      port: 5679
      targetPort: 5679
  selector:
    app: n8n
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      hostname: n8n
      containers:
        - name: n8n
          image: n8nio/n8n:2.18.7
          securityContext:
            runAsUser: 0
          ports:
            - containerPort: 5678
            - containerPort: 5679
          volumeMounts:
            - name: n8n-data
              mountPath: /root/.n8n
            - name: n8n-shared
              mountPath: /shared
          imagePullPolicy: Always
      volumes:
        - name: n8n-data
          persistentVolumeClaim:
            claimName: n8n-data-pvc
        - name: n8n-shared
          nfs:
            server: storage1.ka1.brodatzki.network
            path: "/mnt/pool1/appdata/n8n"

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-n8n-service-http
spec:
  podSelector:
    matchLabels:
      app: n8n
  policyTypes:
    - Ingress
  ingress:
    - ports:
      - protocol: TCP
        port: 5678
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-n8n-runners-to-service
spec:
  podSelector:
    matchLabels:
      app: n8n
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: n8n
      - podSelector:
          matchLabels:
            app: n8n-runner
    - ports:
      - protocol: TCP
        port: 5679
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-n8n-service-to-runners
spec:
  podSelector:
    matchLabels:
      app: n8n-runner
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: n8n
        - podSelector:
            matchLabels:
              app: n8n-runner
    - ports:
      - protocol: TCP
        port: 5680
